add "create, delete data" funcs

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ body {
   font-family: 'Roboto Condensed', sans-serif;
   width: 100vw;
   height: 100vh;
-  background: linear-gradient(to bottom, rgb(231, 157, 238),rgb(135, 233, 126));
+  /* background: linear-gradient(to bottom, rgb(231, 157, 238),rgb(135, 233, 126)); */
 }
 
 header {
@@ -30,7 +30,7 @@ header {
   width: 15rem;
   height: 1.7rem;
   padding: 0.5rem;
-  border: none;
+  border: 1px solid;
 }
 
 .inputForm button {
